2006-01-05  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b9)

	* Japanese translation by Yosuke Suzuki.
	* Spanish translation by Mikel Pascual Aldabaldetreku.

2005-12-22  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b8)

	* Fixed slideshow threading issues.

2005-12-18  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b7)

	* Explicitly disabling keep-alive for the GR protocol
	  which could help alleviate sometimes-reported problem
	  of hanging connections (thanks Valiant).

2005-12-15  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b6)

	* Fixed a bug introduced in b5 which broke the slideshow.

2005-12-13  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b5)

	* More fixes for non-latin galleries (thanks Continental).

2005-12-09  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b4)

	* Fixed another bug with URL loading introduced in b2.
	* Added IM path detection fallback for Windows systems that
	  don't have reg.exe (all but XP Pro and Server 2003).
	* Added 4 and 5Mpix sizes
	* Added JPEG resize quality parameter to a Gallery profile.
	  This can't be changed in the preferences, but can be changed
	  in the GalleryRemote.properties preferences file by adding
	  resizeJpegQuality.n=q, where n is the profile number and q
	  is the quality, between 0 and 99.

2005-12-05  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b3)

	* Fixed bug introduced in b2 when loading settings.

2005-12-02  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b2)

	* Added settings to change the font and font size in slideshow.
	  There is no user-interface to set these, you have to change them
	  in the GalleryRemote.properties or GalleryRemoteApplet.properties
	  files.
	* Downloading the list of albums is slightly more robust.
	* The thumbs temporary directory is now postfixed with the
	  current username, so on multiuser systems different users
	  will be able to use GR concurrently. Thanks mattdm.
	* Reworked the way defaults and prefs are loaded to they can be more